Fix settings panel z-index and opacity

--- a/style/main.css
+++ b/style/main.css
@@ -13,25 +13,25 @@ body {
 }
 
 .logo > svg {
-  fill: white
+  fill: white;
+  z-index: -1;
 }
 
 .settings {
   position: absolute;
+  z-index: 1;
   right: 0;
 }
 
 .settings-window {
   display: none;
-  z-index: 0;
 }
 
 .settings-window > table {
   padding: 10px;
-  z-index: 1;
-  background: #30303082;
+  z-index: 200;
+  background: #000000bf;
   color: white;
-  opacity: 0.75;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 12px;
@@ -49,7 +49,7 @@ body {
 .settings-toggle {
   position: absolute;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
   right: 0;
   width: 34px;
   background: #00000075;
